# NativeAndroidOpenCV

./: local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/renault/mylibraryinclusion/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  my-lib.cpp  native-lib.cpp
app/src/main/java/com/renault/mylibraryinclusion/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/renault/mylibraryinclusion/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
